prologin/prologin/static/css/prologin.css
/* ... */
#latest-news li {
  list-style-type: none;
}

#latest-news-pagination .active > a {
  color: #33449d;
  background-color: #fff;
  border-color: #ddd;
}

/*
 * Right column
 */

#sponsors-lst {
  margin: 0;
  padding: 10px 0;
  list-style-type: none;
}

#sponsors-lst > li {
  margin: 0;
  padding: 10px;
}

.social-bar {
  margin-bottom: 10px;
}

/*
 * Team
 */

.team-member {
  min-height: 80px;
  white-space: nowrap;
}

.team-member.highlight .media-body * {
  font-weight: bold;
}

.team-member-avatar {
  display: inline-block;
  width: 64px;
  height: 64px;
  border-radius: 32px;
  background-image: url('../img/silhouette.png');
  background-repeat: no-repeat;
  background-size: cover;
  border: 1px solid #ccc;
  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
  text-indent: -20em; /* standard text-hiding hack */
  overflow: hidden;
}

/*
 * Code (pygments)
 */
.pyg-hltable, .pyg-hltable td.code {
  width: 100%;
}

.pyg-hltable pre {
  color: inherit;
  background: inherit;
  font-style: inherit;
  text-decoration: inherit;
  font-weight: inherit;
  border: none;
  border-radius: 0;
  margin: 0;
}

/*
 * News
 */
.entry-meta-line:before {
  content: '\f10d';
  font-family: 'FontAwesome';
  position: absolute;
  left: .7em;
}

.entry-meta-line {
  position: relative;
  padding-left: 2em;
  padding-bottom: .5em;
}

.entry-meta-line p {
  margin: 0;
}

.news-entry {
  border-bottom: 1px solid #ddd;
}

.news-entry:last-of-type {
  border: none;
  margin-bottom: 2em;
}

/*
 * Misc
 */

.row > div > h1 {
  margin-top: 0;
}

li address {
  margin-bottom: 0;
}

.btn {
  overflow: hidden;
  text-overflow: ellipsis;
}

.row.no-gutter {
  margin-left: 0;
  margin-right: 0;
}

.row.no-gutter [class*='col-']:not(:first-child),
.row.no-gutter [class*='col-']:not(:last-child) {
  padding-right: 0;
  padding-left: 0;
}

.alert > .fa, .well > .fa {
  display: table-cell;
  /*vertical-align: middle;*/
}

.alert > div, .alert > span, .well > div, .well > span {
  padding-left: 8px;
  display: table-cell;
}

.align-left {
  text-align: left;
}

.single-line {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.fa[data-indicator], .fa.fa-centered {
  width: 1em;
  text-align: center;
}

.pager li.active > a {
  background-color: #337ab7;
  color: white;
  border-color: transparent;
}

.MathJax:focus, .mjx-chtml:focus, .MathJax_PHTML:focus, .MathJax_SVG:focus, .MathJax_PlainSource:focus {
  outline: none;
}

.MathJax:focus, body :focus .MathJax {
  display: inline !important;
}

.task-list-item {
  list-style-type: none;
}

.text-break-word {
  word-wrap: break-word;
}

.text-smallcaps {
  text-transform: capitalize;
  font-variant: small-caps;
}

input[type=checkbox].task-list-item-checkbox {
  margin: 0 0.35em 0.25em -1.25em;
  vertical-align: middle;
}

* > a.headerlink {
  visibility: hidden;
  text-decoration: none;
  padding-left: .5em;
  font-size: 1em;
}

*:hover > a.headerlink {
  visibility: visible;
}

.heading-btn {
  margin: 0;
  padding-bottom: 10px;
}

.sponsor {
  width: 100%;
  max-width: 220px;
}

.problem .progress-bar {
  background-color: #63a0d4;
  text-align: left;
}

.progress-bar-fixed {
  padding: 0 4px;
}

.prologin-winner > i.fa {
  color: goldenrod;
}

@media (min-width: 768px) {
  .dl-horizontal dt {
    white-space: normal; /* the stupid bootstrap think it's a good idea to ellipsis the overflow */
  }
}

.pagination-narrow .pagination {
  margin: 0 0 10px;
}

.profile-info li {
  margin-top: 4px;
  margin-bottom: 4px;
}

.avatar-container-profile {
  width: 220px;
  height: 220px;
  margin-bottom: 1.5em;
}

.avatar-container {
  border-radius: 6px;
  background-image: url('../img/silhouette.png');
  background-size: cover;
  background-repeat: no-repeat;
  position: relative;
}

.avatar-container > .avatar-container {
  position: absolute;
  bottom: -16px;
  right: -16px;
  border: 5px solid white;
  box-sizing: content-box;
  width: 64px;
  height: 64px;
}

.avatar-container-round {
  border-radius: 50%;
  padding-right: 1px; /* fix for webkit clipping the image */
}

.avatar.avatar-full {
  border: 1px solid rgba(0, 0, 0, 0.2);
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
}

.compact-headings h1:first-of-type, .compact-headings h2:first-of-type, .compact-headings h3:first-of-type {
  margin-top: 0;
}

.pager li a {
  margin: 1px;
}

.bgcont {
  padding: 1.5em;
  padding-top: 2em;
  position: relative;
  z-index: 0;
  background-repeat: no-repeat;
  background-size: cover;
  margin-bottom: 1em;
}

.dl-horizontal.dl-narrow dt {
  width: 5em;
}

@media (min-width: 768px) {
  .dl-horizontal.dl-narrow dd {
    margin-left: 6em;
  }
}

.bgcont:after {
  content: " ";
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.7);
  display: block;
  z-index: -1;
}

.bgcont.bgcont-title {
  min-height: 12em;
}

.bgcont.bgcont-title:after {
  background: transparent linear-gradient(to bottom, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 50%);
}

.presentation-body p, .presentation-body h1, .presentation-body h2, .presentation-body h4 {
  color: white;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.8);
}

.presentation-body a:not(.btn) {
  color: #78c2fa;
}

.presentation-body h4 {
  font-weight: bold;
}

.presentation-body h2 {
  margin-top: 0;
  padding-top: 0;
  padding-bottom: 0.4em;
}

.presentation-body .btn-default {
  text-shadow: none;
}

.organization-team-box {
  text-align: center;
  line-height: 1.2;
  margin-bottom: 1em;
}

.challenge-group {
  margin: 0.5em;
  padding: 0;
  border: 1px solid #4155c0;
  position: relative;
}

.challenge-group .challenge-year {
  background: #4155c0;
  position: absolute;
  width: 80px;
  top: 0;
  bottom: 0;
  left: 0;
  color: white;
  float: left;
  text-align: center;
  font-size: 1.2em;
  line-height: 2;
}

.challenge-event-list {
  list-style-type: none;
  margin: 0 0 0 80px;
  padding: 0;
}
/* ... */

